--- a/index.html
+++ b/index.html
@@ -57,13 +57,48 @@
 </div>
 
 <div class="content-body">
-<div class="content-body-photo">
-  <img class="photo" src="Images/Hongkong.jpg" alt="Hong Kong">
-  <h2 class="photo-text">Hong Kong</h2>
-</div>
+
+  <div class="content-body-photo">
+    <img class="photo" src="Images/Flo.jpg" alt="Florian Setecki">
+    <h2 class="photo-text">Business</h2>
+  </div>
+
+  <div class="content-body-photo">
+    <img class="photo" src="Images/Flo1.jpg" alt="Florian Setecki">
+    <h2 class="photo-text">Leisure</h2>
+  </div>
+
+  <div class="content-body-photo">
+    <img class="photo" src="Images/Flo2.jpg" alt="Florian Setecki">
+    <h2 class="photo-text">Sport</h2>
+  </div>
+
+  <div class="content-body-photo">
+    <img class="photo" src="Images/Wilsons.jpg" alt="Wilsons-Promontory-Nationalpark">
+    <h2 class="photo-text">Until the horizon</h2>
+  </div>
 
 </div>
 
+<div id="Contact" class="content-heading">
+  <h3>Contact</h3>
+</div>
+
+<div class="content-body">
+
+  <div class="content-body-section">
+    <h4>MAIL</h4>
+    <h2>florian.setecki@web.de</h2>
+  </div>
+
+  <div class="content-body-section">
+    <h4>PHONE</h4>
+    <h2>+49 176 3055 1673</h2>
+  </div>
+
+
+
+</div>
 
 </div>
 
