--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
   <p class="nav-link"><a class="nav-link-a" href="#Contact">Contact</a></p>
 </div>
 
+
+
 <div id="About" style="margin-top: 0px; !important" class="content-heading">
   <h3>About</h3>
 </div>
@@ -52,6 +54,8 @@
 
 </div>
 
+
+
 <div id="Photos" class="content-heading">
   <h3>Photos</h3>
 </div>
@@ -73,12 +77,9 @@
     <h2 class="photo-text">Sport</h2>
   </div>
 
-  <div class="content-body-photo">
-    <img class="photo" src="Images/Wilsons.jpg" alt="Wilsons-Promontory-Nationalpark">
-    <h2 class="photo-text">Until the horizon</h2>
-  </div>
-
 </div>
+
+
 
 <div id="Contact" class="content-heading">
   <h3>Contact</h3>
@@ -96,9 +97,23 @@
     <h2>+49 176 3055 1673</h2>
   </div>
 
+  </div>
 
 
-</div>
+  <div class="content-body-section">
+    <h4 style="text-align: center;">- OR -</h4>
+  </div>
+
+
+  <div class="contact-formular">
+    <input class="contact-formular-row" type="text" name="your-name" placeholder="NAME">
+      <br>
+    <input class="contact-formular-row" type="email" name="your-mail" placeholder="MAIL">
+      <br>
+    <input class="contact-formular-row" type="tel" name="your-phone" placeholder="PHONE">
+      <br>
+    <input class="contact-formular-row-message" type="text" name="MESSAGE" placeholder="MESSAGE">
+  </div>
 
 </div>
 
