--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <br>
     <input class="contact-formular-row" type="tel" name="your-phone" placeholder="PHONE">
       <br>
-    <input class="contact-formular-row-message" type="text" name="MESSAGE" placeholder="MESSAGE">
+    <textarea class="contact-formular-row-message" name="MESSAGE" placeholder="MESSAGE"></textarea>
   </div>
 
 </div>
